--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,12 @@ flask-cors>=3.0.0
 requests>=2.25.0
 qdrant-client>=1.8.0
 mem0ai==0.1.49
-langchain-core>=0.1.0 # 核心库（必选）
-langchain>=0.1.0       # 主包（基础功能）
-langchain-openai>=0.1.0      # OpenAI 集成
+langchain-core>=0.1.0
+langchain>=0.1.0
+langchain-openai>=0.1.0
 urllib3>=1.26.0,<2.0
 httpx>=0.24.0
 weaviate-client>=4.11.0
 
 # Additional useful packages
-python-dotenv>=0.19.0  # 环境变量管理
+python-dotenv>=0.19.0
