--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ flask>=2.0.0
 flask-cors>=3.0.0
 requests>=2.25.0
 # qdrant-client>=1.8.0
-mem0ai>=0.1.93
+mem0ai==0.1.93
 langchain-core>=0.1.0
 langchain>=0.1.0
 langchain-openai>=0.1.0
